--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             </div>
         </section>
         <div class="features">
+            <div class="features wrapper">
             <h2 class="features_header visually_hidden">Причины скачать приложение Pink</h2>
             <div class="features-headers">
                 <h2 class="features__title">Устали от серости мегаполиса?</h2>
@@ -77,6 +78,7 @@
                 </div>
                 </div>
           </div>
+        </div>
         <section class="reviews">
             <h2 class="slider-reviews__header visually_hidden">Блок отзывов о приложении Pink</h2>
             <div class="reviews wrapper">
